# MySite

./: Dockerfile  Makefile  README.md  pyproject.toml
chrome_extension/: background.js  content.js  manifest.json  popup.html  popup.js
experience/: forms.py  models.py  views.py
experience/migrations/: 0001_initial.py
locale/de/LC_MESSAGES/: django.mo  django.po
mysite/: mixins.py  settings.py  translation.py  urls.py  utils.py  views.py
mysite/core/: views.py
mysite/education/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mysite/education/migrations/: 0001_initial.py  0002_education_url.py  0003_education_order.py  0004_education_description_de_education_description_en_and_more.py  0005_remove_education_description_de_and_more.py  0006_education_description_de_education_description_en_and_more.py
mysite/experience/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mysite/experience/migrations/: 0002_experience_city_experience_country.py  0003_experience_url.py  0004_alter_experience_options.py  0005_experience_order.py  0006_experience_description_de_experience_description_en_and_more.py  0007_remove_experience_description_de_and_more.py  0008_experience_company_de_experience_company_en_and_more.py
mysite/job_application/: admin.py  apps.py  models.py  parser.py  serializers.py  urls.py  views.py
mysite/job_application/migrations/: 0001_initial.py  0004_jobapplication_other_benefits_and_more.py  (+14 more)
mysite/open_source/: admin.py  apps.py  models.py
mysite/projects/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mysite/skills/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mysite/user/: admin.py  forms.py  models.py  urls.py  views.py
scripts/: utils.py
static/: main.css  script.js
templates/: 404.html  base_generic.html  index.html  index_draft.html  pdf_template.html
templates/education/: education.html  education_create.html  education_delete.html  education_list.html  education_update.html
templates/experience/: experience.html  experience_create.html  experience_delete.html  experience_list.html  experience_update.html
templates/open_source/: open_source.html
templates/pdf/: education.html  experience.html  pdf_template.html  pdf_template_custom.html  skills.html
templates/projects/: project.html  project_create.html  project_delete.html  project_list.html
templates/skills/: skill_create.html  skill_delete.html  skill_list.html  skill_update.html  skills.html
templates/user/: login.html  user.html  user_profile.html
user/: models.py
user/migrations/: 0001_initial.py
(+30 files in other folders)
