[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Nikolai <nicolas.gordienko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
django = "^4.2.3"
django-bootstrap4 = "^23.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
dj-database-url = "^2.0.0"
whitenoise = "^6.5.0"
weasyprint = "^59.0"
requests = "^2.31.0"
django-cms = "^4.1.0"
django-treebeard = "^4.7"
django-sekizai = "^4.1.0"
djangocms-versioning = "^2.0.0"
djangocms-alias = "^2.0.0"
django-filer = ">=3.0"
djangocms-text-ckeditor = "^5.1.5"
djangocms-frontend = "^1.2.2"
djangocms-file = "^3.0.1"
djangocms-picture = "^4.1.1"
djangocms-video = "^3.1.0"
djangocms-googlemap = "^2.2.0"
djangocms-snippet = "^3.1.1"
djangocms-style = "^3.1.0"
django-ckeditor = "^6.7.0"
pdfkit = "^1.0.0"
drf-yasg = "^1.21.7"
djangorestframework = "^3.14.0"
readability-lxml = "^0.8.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
django-test = "^0.4030"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
